Fix alignment

--- a/shared/components/LoginDialog.less
+++ b/shared/components/LoginDialog.less
@@ -1,6 +1,13 @@
+.LoginDialog {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .LoginDialog__buttons-container {
     display: flex;
     width: 350px;
+    margin: auto;
     padding: 8px 0;
     max-width: 100%;
     justify-content: space-around;
